hphp/test/zend/good/ext/soap/tests/config.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('soap')) die('skip soap extension not available');
}
