hphp/test/zend/bad/ext/soap/tests/bugs/bug30045.php.skipif
<?php 
  if (!extension_loaded('soap')) die('skip soap extension not available');
  if (!extension_loaded('simplexml')) die('skip simplexml extension not available');
?>